# python.web-hw12

rest_app/: main.py  pyproject.toml
rest_app/migrations/: env.py
rest_app/migrations/versions/: 3986f204a81c_user_added.py  907ae589a9c1_init.py  92cebe832e7c_add_autoincrement.py
rest_app/src/: schemas.py
rest_app/src/database/: db.py  models.py
rest_app/src/repository/: contacts.py  users.py
rest_app/src/routes/: auth.py  contacts.py
rest_app/src/services/: auth.py
